feat(resume): update interest & aws certification

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. Go hang out with friends at a coffee shop.</p>
+                    <p>Apart from being a software engineer, I enjoy most of my time being outdoors. Go hang out with friends at a coffee shop.</p>
                     <p class="mb-0">When forced to stay indoors, I follow a number of science fiction and fantasy films and television shows, play the guitar and I spend a lot of my free time exploring the latest technological advances in the world of application development, especially backend services.</p>
                 </div>
             </section>
@@ -195,6 +195,10 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            AWS Certified Developer - Associate
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
                             Google Project Management
